<?xml version="1.0"?>
<package>
  <name>mal_msgs</name>
  <version>0.0.1</version>
  <description>Message Package</description>
  <maintainer email="mail@ayafuji.com">ayafuji</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
 <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
